// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
Array [
  <div
    className="nav-bar-toggle"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        fill="currentColor"
      />
    </svg>
  </div>,
  <div
    className="nav-bar-sm"
  >
    <div
      className="brand"
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <a
        href="/created/hive-150329"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="bluebrain-logo-circle.webp"
        />
      </a>
      <div
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="hiveLogo.png"
          width="5%"
        />
      </div>
    </div>
  </div>,
  <div
    className="nav-bar"
  >
    <div
      className="nav-bar-inner"
    >
      <div
        className="brand"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <a
          href="/created/hive-150329"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="bluebrain-logo-circle.webp"
          />
        </a>
        <div
          className="brand"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="hiveLogo.png"
            width="100%"
          />
        </div>
      </div>
      <div
        className="flex-spacer"
      />
      <div
        className="search-bar"
      >
        <div
          className="suggestion"
        >
          <div
            className="search-box"
          >
            <span
              className="prepend"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <input
              autoComplete="off"
              className="form-control"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search 10,000,000 posts"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="switch-menu"
      >
        <div
          className="switch-language"
        >
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="dropdown-btn"
            >
              <div
                className="label"
              >
                EN
              </div>
              <div
                className="menu-down"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="switch-theme"
          onClick={[Function]}
          title="Night Theme"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <a
          className="switch-theme pencil"
          href="/submit"
          onClick={[Function]}
          title="Create Post"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="btn-menu"
      >
        <div>
          <div
            className="login-required"
          >
            <button
              className="btn-login btn-primary btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Login
            </button>
            <a
              className="btn btn-primary"
              href="https://signup.hive.io/"
              target="signup"
            >
              Signup
            </a>
          </div>
          <div
            className="submit-post"
          >
            <a
              className="btn btn-outline-primary"
              href="/submit"
              onClick={[Function]}
              title="Create Post"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <audio
      autoPlay={false}
      id="notification-audio"
      muted={true}
      src="notification.mp3"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>,
]
`;

exports[`(2) Night Theme 1`] = `
Array [
  <div
    className="nav-bar-toggle"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        fill="currentColor"
      />
    </svg>
  </div>,
  <div
    className="nav-bar-sm"
  >
    <div
      className="brand"
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <a
        href="/created/hive-150329"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="bluebrain-logo-circle.webp"
        />
      </a>
      <div
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="hiveLogo.png"
          width="5%"
        />
      </div>
    </div>
  </div>,
  <div
    className="nav-bar"
  >
    <div
      className="nav-bar-inner"
    >
      <div
        className="brand"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <a
          href="/created/hive-150329"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="bluebrain-logo-circle.webp"
          />
        </a>
        <div
          className="brand"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="hiveLogo.png"
            width="100%"
          />
        </div>
      </div>
      <div
        className="flex-spacer"
      />
      <div
        className="search-bar"
      >
        <div
          className="suggestion"
        >
          <div
            className="search-box"
          >
            <span
              className="prepend"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <input
              autoComplete="off"
              className="form-control"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search 10,000,000 posts"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="switch-menu"
      >
        <div
          className="switch-language"
        >
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="dropdown-btn"
            >
              <div
                className="label"
              >
                EN
              </div>
              <div
                className="menu-down"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="switch-theme"
          onClick={[Function]}
          title="Day Theme"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <a
          className="switch-theme pencil"
          href="/submit"
          onClick={[Function]}
          title="Create Post"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="btn-menu"
      >
        <div>
          <div
            className="login-required"
          >
            <button
              className="btn-login btn-primary btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Login
            </button>
            <a
              className="btn btn-primary"
              href="https://signup.hive.io/"
              target="signup"
            >
              Signup
            </a>
          </div>
          <div
            className="submit-post"
          >
            <a
              className="btn btn-outline-primary"
              href="/submit"
              onClick={[Function]}
              title="Create Post"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <audio
      autoPlay={false}
      id="notification-audio"
      muted={true}
      src="notification.mp3"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>,
]
`;

exports[`(3) With active user 1`] = `
Array [
  <div
    className="nav-bar-toggle"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        fill="currentColor"
      />
    </svg>
  </div>,
  <div
    className="nav-bar-sm"
  >
    <div
      className="brand"
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <a
        href="/created/hive-150329"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="bluebrain-logo-circle.webp"
        />
      </a>
      <a
        className="logo"
        href="/@foo/feed"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="hiveLogo.png"
          width="5%"
        />
      </a>
    </div>
  </div>,
  <div
    className="nav-bar"
  >
    <div
      className="nav-bar-inner"
    >
      <div
        className="brand"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <a
          href="/created/hive-150329"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="bluebrain-logo-circle.webp"
          />
        </a>
        <a
          href="/@foo/feed"
          onClick={[Function]}
        >
           
          <img
            alt="Logo"
            className="logo"
            src="hiveLogo.png"
            width="5%"
          />
        </a>
      </div>
      <div
        className="flex-spacer"
      />
      <div
        className="search-bar"
      >
        <div
          className="suggestion"
        >
          <div
            className="search-box"
          >
            <span
              className="prepend"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <input
              autoComplete="off"
              className="form-control"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search 10,000,000 posts"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="switch-menu"
      >
        <div
          className="switch-language"
        >
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="dropdown-btn"
            >
              <div
                className="label"
              >
                EN
              </div>
              <div
                className="menu-down"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="switch-theme"
          onClick={[Function]}
          title="Night Theme"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <a
          className="switch-theme pencil"
          href="/submit"
          onClick={[Function]}
          title="Create Post"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="btn-menu"
      />
      <div>
        <div
          className="user-nav"
        >
          <a
            className="user-wallet"
            href="/@foo/hive"
            onClick={[Function]}
            title="Wallet"
          >
            <svg
              height="100%"
              viewBox="0 0 512 512"
              width="100%"
            >
              <path
                d="M260.353,254.878,131.538,33.1a2.208,2.208,0,0,0-3.829.009L.3,254.887A2.234,2.234,0,0,0,.3,257.122L129.116,478.9a2.208,2.208,0,0,0,3.83-.009L260.358,257.113A2.239,2.239,0,0,0,260.353,254.878Zm39.078-25.713a2.19,2.19,0,0,0,1.9,1.111h66.509a2.226,2.226,0,0,0,1.9-3.341L259.115,33.111a2.187,2.187,0,0,0-1.9-1.111H190.707a2.226,2.226,0,0,0-1.9,3.341ZM511.7,254.886,384.9,33.112A2.2,2.2,0,0,0,382.99,32h-66.6a2.226,2.226,0,0,0-1.906,3.34L440.652,256,314.481,476.66a2.226,2.226,0,0,0,1.906,3.34h66.6a2.2,2.2,0,0,0,1.906-1.112L511.7,257.114A2.243,2.243,0,0,0,511.7,254.886ZM366.016,284.917H299.508a2.187,2.187,0,0,0-1.9,1.111l-108.8,190.631a2.226,2.226,0,0,0,1.9,3.341h66.509a2.187,2.187,0,0,0,1.9-1.111l108.8-190.631A2.226,2.226,0,0,0,366.016,284.917Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            className="user-points"
            href="/@foo/wallet"
            onClick={[Function]}
          >
            <img
              height="25px"
              src="logo-small-white-bluebrain-transparent.png"
              width="25px"
            />
          </a>
          <span
            className="notifications"
            onClick={[Function]}
            title="Notifications"
          >
            <svg
              fill="#ffffff"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="submit-post"
        >
          <a
            className="btn btn-outline-primary"
            href="/submit"
            onClick={[Function]}
            title="Create Post"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <audio
      autoPlay={false}
      id="notification-audio"
      muted={true}
      src="notification.mp3"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>,
]
`;

exports[`(4) With active user && usePrivate = false 1`] = `
Array [
  <div
    className="nav-bar-toggle"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
        fill="currentColor"
      />
    </svg>
  </div>,
  <div
    className="nav-bar-sm"
  >
    <div
      className="brand"
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <a
        href="/created/hive-150329"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="bluebrain-logo-circle.webp"
        />
      </a>
      <a
        className="logo"
        href="/@foo/feed"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="hiveLogo.png"
          width="5%"
        />
      </a>
    </div>
  </div>,
  <div
    className="nav-bar"
  >
    <div
      className="nav-bar-inner"
    >
      <div
        className="brand"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <a
          href="/created/hive-150329"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="bluebrain-logo-circle.webp"
          />
        </a>
        <a
          href="/@foo/feed"
          onClick={[Function]}
        >
           
          <img
            alt="Logo"
            className="logo"
            src="hiveLogo.png"
            width="5%"
          />
        </a>
      </div>
      <div
        className="flex-spacer"
      />
      <div
        className="search-bar"
      >
        <div
          className="suggestion"
        >
          <div
            className="search-box"
          >
            <span
              className="prepend"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <input
              autoComplete="off"
              className="form-control"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search 10,000,000 posts"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="switch-menu"
      >
        <div
          className="switch-language"
        >
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="dropdown-btn"
            >
              <div
                className="label"
              >
                EN
              </div>
              <div
                className="menu-down"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="switch-theme"
          onClick={[Function]}
          title="Night Theme"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <a
          className="switch-theme pencil"
          href="/submit"
          onClick={[Function]}
          title="Create Post"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="btn-menu"
      />
      <div>
        <div
          className="user-nav"
        >
          <a
            className="user-wallet"
            href="/@foo/hive"
            onClick={[Function]}
            title="Wallet"
          >
            <svg
              height="100%"
              viewBox="0 0 512 512"
              width="100%"
            >
              <path
                d="M260.353,254.878,131.538,33.1a2.208,2.208,0,0,0-3.829.009L.3,254.887A2.234,2.234,0,0,0,.3,257.122L129.116,478.9a2.208,2.208,0,0,0,3.83-.009L260.358,257.113A2.239,2.239,0,0,0,260.353,254.878Zm39.078-25.713a2.19,2.19,0,0,0,1.9,1.111h66.509a2.226,2.226,0,0,0,1.9-3.341L259.115,33.111a2.187,2.187,0,0,0-1.9-1.111H190.707a2.226,2.226,0,0,0-1.9,3.341ZM511.7,254.886,384.9,33.112A2.2,2.2,0,0,0,382.99,32h-66.6a2.226,2.226,0,0,0-1.906,3.34L440.652,256,314.481,476.66a2.226,2.226,0,0,0,1.906,3.34h66.6a2.2,2.2,0,0,0,1.906-1.112L511.7,257.114A2.243,2.243,0,0,0,511.7,254.886ZM366.016,284.917H299.508a2.187,2.187,0,0,0-1.9,1.111l-108.8,190.631a2.226,2.226,0,0,0,1.9,3.341h66.509a2.187,2.187,0,0,0,1.9-1.111l108.8-190.631A2.226,2.226,0,0,0,366.016,284.917Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            className="user-points"
            href="/@foo/wallet"
            onClick={[Function]}
          >
            <img
              height="25px"
              src="logo-small-white-bluebrain-transparent.png"
              width="25px"
            />
          </a>
          <div
            className="custom-dropdown float-right"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
                }
              }
            />
          </div>
        </div>
        <div
          className="submit-post"
        >
          <a
            className="btn btn-outline-primary"
            href="/submit"
            onClick={[Function]}
            title="Create Post"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;
